--- a/HTML Project/Pages/index.html
+++ b/HTML Project/Pages/index.html
@@ -9,6 +9,8 @@
   <body>
     <header class="header">
       <input type="checkbox" id="openSidebar" />
+
+      <!-- Hamburger Icon -->
       <label for="openSidebar" class="sidebarIconToggle">
         <div class="spinner top"></div>
         <div class="spinner middle"></div>
@@ -104,6 +106,8 @@
       </div>
     </main>
     <hr />
+
+    <!-- Footer section -->
     <footer class="footer">
       <h2>For More</h2>
       <p>Email: <a href="mailto:bibekgt49@gmail.com">bibekgt49@gmail.com</a></p>
