--- a/CRUD Operation/crud.html
+++ b/CRUD Operation/crud.html
@@ -9,23 +9,18 @@
   <body onload="readAll()">
     <div class="container">
       <div class="form-container">
-        <form class="create-form">
-          <input type="text" hidden class="id" />
-          <input type="text" class="name" placeholder="Enter Name" />
-          <input type="email" class="email" value=""  placeholder="Enter Email" />
+        
+        <form class="crud-form" onsubmit="handleSubmit(event)">
+          <input type="hidden" class="id" />
+          <input type="text" class="name" placeholder="Enter Name" required/>
+          <input type="email" class="email" placeholder="Enter Email" required/>
+          <input type="text" class="phone" placeholder="Enter Phone Number" reuired>
           <p id="message"></p>
-          <button type="button" onclick="create()">Create</button>
-        </form>
-
-        <form class="update-form">
-          <input type="text" hidden class="uid" />
-          <input type="text" class="uname" />
-          <input type="email" class="uemail" />
-          <button type="button" onclick="update()">Update</button>
+          <button type="submit" >Save</button>
         </form>
 
         <div class="add">
-          <button onclick="add()">Add</button>
+          <button onclick="showForm()">Add</button>
         </div>
 
         <table>
@@ -33,6 +28,7 @@
             <tr>
               <th>Name</th>
               <th>Email</th>
+              <th>Phone No</th>
               <th>Action</th>
             </tr>
           </thead>
@@ -40,6 +36,16 @@
         </table>
       </div>
     </div>
+
+    <div id="deleteModal" class="modal">
+      <div class="modal-content">
+        <p>Are you sure you want to delete this record?</p>
+        <button onclick="confirmDelete()">Yes</button>
+        <button onclick="closeModal()">No</button>
+      </div>
+    </div>
+
+
     <script src="./crud.js"></script>
   </body>
 </html>
